--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="container">
         <div class="tarjeta">
             <img src="./imagines/shadowww.jpg" alt="" class="imagenshadowsito" >
-            <div class="foot"></div>
+            <div class="foot"> <h3>Medellin 2025</h3> </div>
+            <div class="titulos"><h1>Manuela Gutierrez G</h1> 
+                 <h2>Aprendiz del SENA</h2></div>
         </div>
     </div>
 </body>
